# stanford-canvas-claude

./: .gitignore  README.md  Stanford Canvas × Claude — Setup Guide.docx
canvas-mcp/: .env.example  pyproject.toml
canvas-mcp/src/: canvas_api.py  canvas_server.py
prompts/: course-template.md
setup/: claude_desktop_config.example.json
